# quant-trading-system

./: .env.example  .gitignore  FINAL_COMPREHENSIVE_RESULTS.md  IBKR_SETUP.txt  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_STATUS.txt  README.md  RESULTS_SUMMARY.md  comprehensive_strategy_analyzer.py  enhanced_algo_bot.py  gpt strategy  live_trading_system.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_ib_connection.py  validate_improvements.py
data/: comprehensive_analysis_report.txt  comprehensive_analysis_results.json  enhanced_final_report.txt  enhanced_results.json  validation_report.json
data/universes/: sp500.csv
modules/: greeks.py  options_data.py  signal_generator.py  trade_executor.py
src/: algo_trading_bot.py  test_ib_connection.py
src/Others/: RSI.xlsx
src/backtest/: costs.py  engine.py  metrics.py  sizing.py  slippage.py
src/backtesting/: backtest_engine.py
src/cli/: backtest.py  live.py  main.py  papertrade.py  scan.py  walkforward.py
src/config/: settings.yaml
src/core/: config.py  universes.py
src/data/: final_results.json
src/data/backtest_results/: backtest_20250723_010342.json
src/datasource/: base.py  ibkr_source.py  options_source.py  yfinance_source.py
src/execution/: ibkr_client.py  order_router.py
src/ibkr/: ibkr_manager.py
src/live/: portfolio_state.py  risk.py  scheduler.py
src/modules/: greeks.py  options_data.py  signal_generator.py  trade_executor.py
src/risk_management/: risk_manager_advanced.py
src/strategies/: advanced_strategies.py  base.py  breakout.py  earnings_iv_short.py  loader.py  sma_cross.py
src/utils/: config_manager.py  error_handler.py
strategies/: breakout.yaml  sma_cross.yaml  sma_fast.yaml
tests/: test_algo_trading_bot.py  test_config_manager.py  test_strategies.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat
