[tool.poetry]
name = "quant-trading-system"
version = "0.1.0"
description = "Clean, staged quant trading system with YAML strategy authoring, backtesting, and IBKR integration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
vectorbt = "^0.26.0"
numba = "^0.59.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
scipy = "^1.12.0"
matplotlib = "^3.8.0"
ib-insync = "^0.9.86"
python-dotenv = "^1.0.0"
duckdb = "^0.10.0"
tabulate = "^0.9.0"
tqdm = "^4.66.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
apscheduler = "^3.10.4"
yfinance = "^0.2.36"
pandas-market-calendars = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
black = "^24.1.0"
types-pyyaml = "^6.0.12"
types-tabulate = "^0.9.0"

[tool.poetry.scripts]
qts = "src.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "TRY003", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']
